--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,29 +6,38 @@ services:
     restart: always
     ports:
       - "8080:8080"
+    networks:
+      - my_network
   api:
     container_name: api_container
     build: ../url-shortener-api/
     restart: always
     ports:
       - "3000:3000"
+    command: sh -c "npx prisma migrate deploy && npm start"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     networks:
-      - app
+      - my_network
   db:
     container_name: database_container
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
-    restart: always
     environment:
       MYSQL_DATABASE: url_shortener_db
+      MYSQL_ROOT_USER: root
       MYSQL_ROOT_PASSWORD: admin@123
     ports:
       - "3306:3306"
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+    # volumes:
+    #   - ./data:/var/lib/mysql
     networks:
-      - app
-
+      - my_network
 networks:
-  app:
-    driver: bridge
+  my_network:
