--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
+    "copy-to-clipboard": "^3.3.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.5.0",
